# freeRTOSprojects

./: .gitignore  README.md
led_effect_server/esp32_circuitpython_server/: code.py  settings.toml
led_effect_server/esp32_led_effect/: package-lock.json  package.json
led_effect_server/esp32_led_effect_react/: package-lock.json  package.json
led_effect_server/esp32_led_effect_react/src/: App.css  App.tsx
led_effect_server/esp32_led_effect_react/src/Components/LEDControl/: LEDControl.module.css  LEDControl.tsx  types.ts
nucleo_f746zg_led_effect_queue/: .cproject  .mxproject  .project  CMakeLists.txt  Makefile  README.md  cubeide-gcc.cmake  nucleo_f746zg_led_effect_queue Debug.launch  nucleo_f746zg_led_effect_queue.ioc  nucleo_f746zg_rtos_template Debug.launch  ozone_test.jdebug
nucleo_f746zg_led_effect_queue/Core/Inc/: appCommon.h  commandParser.h  ledEffect.h  main.h  mainMenu.h  printManager.h  rtcConfig.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  userCallbacks.h  utils.h
nucleo_f746zg_led_effect_queue/Core/Src/: commandParser.c  ledEffect.c  main.c  mainMenu.c  printManager.c  rtcConfig.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c  userCallbacks.c  utils.c
nucleo_f746zg_led_effect_queue/Core/Startup/: startup_stm32f746zgtx.s
nucleo_f746zg_led_effect_queue/Drivers/: CMakeLists.txt
nucleo_f746zg_led_effect_queue/Drivers/STM32F7xx_HAL_Driver/: CMakeLists.txt
nucleo_f746zg_led_effect_queue/Tools/clang-tidy/: .clang-tidy
nucleo_f746zg_led_effect_queue/cmake/: Docs.cmake  Tools.cmake
nucleo_f746zg_led_effect_queue/cmake/toolchains/: arm-none-eabi-gcc.cmake
nucleo_f746zg_led_effect_queue/systemview_rec/: rec4_print_periodicity.SVDat
